<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minesweeper_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <hu.ait.android.minesweeper.view.MinesweeperView
                android:id="@+id/gameView"
                android:layout_width="400dp"
                android:layout_height="200dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart_button" />

        <ToggleButton
            android:id="@+id/btnFlags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/flagsOff"
            android:textOn="@string/flagsOn" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/totalBombs" />

    </LinearLayout>
</ScrollView>